[package]
name = "harold_rs"
version = "0.1.0"
authors = ["Nate Fatkhiyev <nfatkhiyev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
reqwest = "0.10.8"

[dependencies.ldap3]
version = "0.7.1"