[package]
name = "harold_rs"
version = "0.1.0"
authors = ["Nate Fatkhiyev <nfatkhiyev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
vlc-rs = "0.3"
rppal = "0.11.3"
rand = "0.7.3"
serialport = "3.3.0"

[dependencies.ldap3]
version = "0.7.1"